Fix evidence handoff and synthesis tone issues
Evidence Handoff Fix:
- Modified FullExperimentStrategy to properly load curated evidence artifacts from IntelligentEvidenceRetrievalAgent into RunContext
- Fixed artifact loading logic to handle the agent's actual output structure (artifacts list vs. single metadata hash)
- Added proper error handling and audit logging for evidence loading

Synthesis Tone Fix:
- Updated Stage 1 prompt to use neutral, academic language instead of conversational expert persona
- Removed references to 'researcher', 'you', 'your colleagues' throughout the prompt
- Changed tone from 'senior expert advisor' to neutral academic analysis
- Maintains analytical rigor while following academic writing standards

--- a/discernus/agents/two_stage_synthesis_agent/stage1_prompt.yaml
+++ b/discernus/agents/two_stage_synthesis_agent/stage1_prompt.yaml
@@ -1,11 +1,11 @@
 template: |
-  You are a senior computational social science expert with decades of experience writing for peer review journals and conference proceedings. You are have exceptional statistical analysis and you are particularly gifted at finding and composing the narrative exposition of statistical results. You are also a master of the art of writing for the academic audience with a focus on clarity and precision. 
+  Generate a comprehensive research report based on statistical analysis and experimental data. The report should follow academic standards with neutral, factual language and rigorous analytical methodology.
   
-  Your objective is to provide the researcher who originated this computational analysis with insights that would take months of manual analysis to uncover, equipping them with insight-packed writing that they can adapt and share with their colleagues and supervisors.
+  The analysis should provide systematic insights derived from computational methods, presenting findings that support evidence-based conclusions suitable for academic discourse.
 
   # STAGE 1 TASK: FRAMEWORK-DRIVEN DATA ANALYSIS
   
-  Generate a comprehensive research report based SOLELY on statistical results and experiment metadata. Your analysis must demonstrate deep understanding of the framework's intellectual architecture and reveal insights the researchers may not have anticipated.
+  Generate a comprehensive research report based SOLELY on statistical results and experiment metadata. The analysis must demonstrate deep understanding of the framework's intellectual architecture and reveal systematic insights derived from the data.
 
   ## CRITICAL CONSTRAINTS
   - NO evidence quotes or corpus text should influence your analysis
@@ -29,11 +29,11 @@ template: |
   - **Analyze `statistical_functions` for Methodology**: Examine the Python code in `statistical_functions` to understand the specific tests, parameters, and scientific approach used. This provides the methodological context for the results.
   - **Generate a Methodological Summary**: Based on your analysis of the code, write a concise, academic-style summary of the statistical methods implemented. This summary will be used in the final report.
 
-  **Step 3: Divine Experimental Intent**
+  **Step 3: Analyze Experimental Intent**
   - Analyze the experiment configuration and corpus context
   - Determine if this is hypothesis-driven research or exploratory analysis
-  - Identify the researcher's explicit and implicit research questions
-  - Consider what the researcher hoped to discover vs. what they may have missed
+  - Identify explicit and implicit research questions
+  - Consider intended objectives versus actual findings
 
   **Step 4: Interpret Statistical Patterns Through Framework Lens**
   - Examine statistical results in light of the framework's theoretical structure
@@ -41,18 +41,18 @@ template: |
   - Look for framework validation (do dimensions behave as theorized?)
   - Detect unexpected patterns that challenge or extend the framework
 
-  **Step 5: Discover Unanticipated Insights**
-  - Look beyond the researcher's stated objectives
-  - Identify statistical patterns that reveal framework possibilities not explored
-  - Consider cross-dimensional relationships that might surprise the researcher
-  - Assess whether the framework captured phenomena the researcher didn't anticipate
+  **Step 5: Identify Emergent Insights**
+  - Look beyond stated experimental objectives
+  - Identify statistical patterns that reveal unexplored framework capabilities
+  - Consider cross-dimensional relationships that extend beyond initial hypotheses
+  - Assess whether the framework captured phenomena beyond its intended scope
 
   **Step 6: Synthesize Framework Performance Assessment**
   - Evaluate how well the framework performed in this analytical context
   - Identify framework strengths, limitations, and unexpected capabilities
   - Consider implications for framework refinement or broader application
 
-  ## REPORT STRUCTURE FOR RESEARCHERS
+  ## REPORT STRUCTURE
 
   ### 1. Executive Summary (2-3 paragraphs)
   - Central thesis: What is the single most important story the data tells?
@@ -67,10 +67,10 @@ template: |
   - **Cross-Dimensional Insights**: Unexpected relationships between framework elements
 
   ### 3. Experimental Intent & Hypothesis Evaluation
-  - **Research Question Assessment**: What the researcher was trying to discover
+  - **Research Question Assessment**: Stated experimental objectives and research questions
   - **Hypothesis Outcomes** (if present): CONFIRMED/FALSIFIED/INDETERMINATE with statistical evidence
   - **Exploratory Findings** (if no hypotheses): Primary patterns discovered through analysis
-  - **Intent vs. Discovery**: What the data revealed beyond the researcher's expectations
+  - **Intent vs. Discovery**: Findings that extend beyond stated objectives
 
   ### 4. Statistical Findings & Patterns
   - **Primary Results**: Strongest statistical patterns with framework interpretation
@@ -78,8 +78,8 @@ template: |
   - **Correlation Networks**: Relationships between dimensions and any derived metrics (if available)
   - **Anomalies & Surprises**: Unexpected results that challenge assumptions
 
-  ### 5. Unanticipated Insights & Framework Extensions
-  - **Beyond the Research Question**: Insights the researcher may not have anticipated
+  ### 5. Emergent Insights & Framework Extensions
+  - **Beyond the Research Question**: Insights that extend beyond stated objectives
   - **Framework Potential**: Capabilities revealed that weren't explicitly explored
   - **Methodological Discoveries**: What this analysis reveals about the framework's broader utility
   - **Theoretical Implications**: How findings extend or challenge the framework's foundations
@@ -116,19 +116,19 @@ template: |
 
   ### Insight Generation Principles
   - **Beyond Confirmation**: Look for patterns that extend beyond hypothesis testing
-  - **Framework Innovation**: Consider how findings might refine or revolutionize the framework
-  - **Researcher Surprise**: Identify insights the researcher likely didn't anticipate
+  - **Framework Innovation**: Consider how findings might refine or advance the framework
+  - **Emergent Patterns**: Identify insights that extend beyond stated objectives
   - **Field Advancement**: Assess broader implications for computational social science
 
   ## OUTPUT REQUIREMENTS
   
-  **Research Intelligence**: Sophisticated analysis that reveals insights the researcher would take months to discover manually
-  **Discussion-Ready Quality**: Professional enough to share with colleagues, supervisors, or graduate assistants without embarrassment
-  **Researcher Empowerment**: Position findings as computational discoveries that support and enhance the researcher's expertise
-  **Framework Illumination**: Reveal the framework's potential in ways that inspire further research directions
+  **Analytical Rigor**: Sophisticated analysis that reveals systematic insights through computational methods
+  **Academic Standards**: Professional quality suitable for academic discourse and peer review
+  **Empirical Foundation**: Position findings as data-driven discoveries that support evidence-based conclusions
+  **Framework Assessment**: Reveal the framework's performance and potential through systematic evaluation
 
   **Target Length**: 2500-4000 words for comprehensive analysis
-  **Tone**: Intelligent and insightful, but clearly positioning the researcher as the expert who commissioned this analysis
+  **Tone**: Neutral, factual, and academic following established scholarly conventions
   **Statistical Precision**: Follow APA 7th edition rounding standards - correlations/means/SDs to 2-3 decimal places (r = 0.84, M = 2.15), percentages to whole numbers or 1 decimal (85% or 84.3%), p-values to 2-3 decimals (p = 0.03 or p < 0.001). Use consistent precision throughout - minor rounding variations (0.74 vs 0.735) are acceptable
 
-  Remember: You are the researcher's analytical advisor - provide sophisticated insights that accelerate their research and equip them to engage with confidence with their colleagues. This is Stage 1 - pure data-driven analysis that reveals the framework's performance and potential. Evidence integration comes in Stage 2.
+  This is Stage 1 - pure data-driven analysis that reveals the framework's performance and potential through systematic statistical evaluation. Evidence integration occurs in Stage 2.
