Implement evidence integration simplification
- Remove IntelligentEvidenceRetrievalAgent from FullExperimentStrategy pipeline
- Add _load_raw_evidence_artifacts method to TwoStageSynthesisAgent
- Enhanced stage2_prompt.yaml with evidence curation logic from evidence agent
- Stage 2 now does both curation AND integration in single Pro model call
- Maintains THIN architecture: raw evidence loaded directly from analysis artifacts
- Preserves analytical integrity: Stage 1 content never modified, only enhanced with quotes
- Framework dimensions discovered from Stage 1 report for targeted curation

--- a/discernus/agents/two_stage_synthesis_agent/stage2_prompt.yaml
+++ b/discernus/agents/two_stage_synthesis_agent/stage2_prompt.yaml
@@ -1,9 +1,40 @@
 template: |
-  You are a sophisticated evidence quote integration expert designed to enhance analytical reports with evidence quotes that directly connect statistical findings to the original texts that were analyzed. Your role is to transform statistical insights into discussion-ready reports that researchers can confidently share with colleagues, positioning the researcher as the expert who directed this computational analysis.
+  You are a sophisticated evidence curation and integration expert designed to enhance analytical reports with strategically selected evidence quotes. Your role is to FIRST curate the best evidence from raw analysis artifacts, then integrate those quotes throughout the Stage 1 report to create a discussion-ready research document.
 
-  # STAGE 2 OBJECTIVE: EVIDENCE QUOTE INFUSION & APPENDIX CREATION
+  # STAGE 2 OBJECTIVE: EVIDENCE CURATION & INTEGRATION
 
-  Transform the Stage 1 framework-driven analysis into a complete research report by strategically integrating curated evidence quotes throughout the report AND to compose a full appendix that contains all the evidence quotes provided to you, arranged by the statistical findings and framework dimensions. Your task is to make the statistical insights come alive through textual evidence while preserving the analytical architecture completely.
+  **CRITICAL WORKFLOW**: This is a two-step process within a single task:
+  1. **EVIDENCE CURATION**: From ALL raw evidence quotes provided, select the most compelling quotes using rigorous academic standards
+  2. **EVIDENCE INTEGRATION**: Strategically integrate the curated quotes throughout the Stage 1 report while preserving its analytical architecture completely
+
+  ## EVIDENCE CURATION PHASE (Step 1)
+
+  ### Framework Dimension Discovery
+  First, analyze the Stage 1 report to identify ALL framework dimensions being analyzed. Look for dimension names, scoring patterns, and analytical categories. These dimensions will guide your evidence selection.
+
+  ### Evidence Selection Criteria (from Evidence Agent Logic)
+  Select quotes that:
+  1. **Directly support statistical findings** - Each quote must illustrate a specific pattern found in the data
+  2. **Are clear, specific, and representative** - Avoid vague or ambiguous quotes
+  3. **Demonstrate patterns identified in statistical analysis** - Connect evidence to quantitative insights
+  4. **Provide strong evidence for research conclusions** - Focus on quotes that would convince a skeptical peer reviewer
+  5. **Quality over quantity** - Better to have fewer excellent quotes than many mediocre ones
+
+  ### Curation Targets
+  - **Up to 10 quotes per framework dimension** (discovered from Stage 1 report)
+  - **Prioritize quotes with highest statistical relevance**
+  - **Ensure balanced coverage across all dimensions**
+  - **Include document attribution for each quote**
+
+  ## EVIDENCE INTEGRATION PHASE (Step 2)
+
+  Once you have curated the best evidence quotes, integrate them into the Stage 1 report following these principles:
+
+  ### Integration Standards
+  - **PRESERVE ALL STAGE 1 CONTENT**: Never modify, remove, or alter any analytical claims, conclusions, or interpretations
+  - **ADD QUOTES ONLY**: Your role is purely additive - infuse quotes where they illuminate existing analysis
+  - **Strategic Placement**: Place quotes where they add clarity and concrete examples to abstract statistical concepts
+  - **Academic Citation**: Use format: 'As [Speaker] stated: "[exact quote]" (Source: [document_name])'
 
   ## SACRED CONSTRAINTS - NEVER VIOLATE
   - **Analytical Preservation**: DO NOT change any analytical claims, conclusions, or interpretations from Stage 1
@@ -98,15 +129,16 @@ template: |
   - **Methodological Discoveries**: Evidence validating framework utility revelations
   - **Theoretical Implications**: Quotes supporting framework foundation extensions
 
-  ### 6. Evidence Appendix: Complete Audit Trail
-  - **By Statistical Finding**: Organize all quotes by the specific statistical patterns they illustrate
-  - **By Framework Dimension**: Group evidence showing dimensional performance
-  - **By Discovery Type**: Separate anticipated vs. unanticipated insights
+  ### 6. Evidence Appendix: Curated Quote Organization
+  Create a comprehensive appendix with ALL curated quotes organized by:
+  - **By Framework Dimension**: Up to 10 best quotes per dimension (discovered from Stage 1 report)
+  - **By Statistical Finding**: Group quotes that illustrate specific data patterns
+  - **By Document Source**: Maintain clear provenance for all quotes
   - **Complete Attribution**: Full source information for every quote used
 
   ### 7. Appendix: Complete Audit Trail
-  - **Appendix A: Evidence Appendix**: Organize all quotes by the specific statistical patterns they illustrate, by framework dimension, and by discovery type. Ensure complete attribution for every quote.
-  - **Appendix B: Methodological Appendix**: Include the full `Methodological Summary` from the Stage 1 report. Provide an explicit reference to the statistical analysis artifact file (e.g., `statistical_analysis_xxxxxxxx.json`) where the complete Python code can be found for full reproducibility.
+  - **Appendix A: Evidence Appendix**: Organize all CURATED quotes by framework dimension (up to 10 per dimension), statistical pattern, and document source. Ensure complete attribution for every quote.
+  - **Appendix B: Methodological Appendix**: Include the full `Methodological Summary` from the Stage 1 report. Provide an explicit reference to the statistical analysis artifact file where the complete Python code can be found for full reproducibility.
 
   ## QUALITY ASSURANCE REQUIREMENTS
 
